[package]
name = "vrt-backend-rust-chatgpt"
description = "Visual Regression Tracker backend service"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/tokio-rs/axum
axum = "0.6"

# https://tokio.rs/
tokio = { version = "1.32", features = ["full"] }

# https://diesel.rs/
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
# Also: cargo install diesel_cli --no-default-features --features postgres

# https://diesel.rs/guides/getting-started/#migrations
diesel_migrations = "2.1"

r2d2 = "0.8"
dotenv = "0.15"

[dev-dependencies]

# https://insta.rs/
insta = "1.31"
