[package]
name = "vrt-backend-rust-chatgpt"
description = "Visual Regression Tracker backend service"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/tokio-rs/axum
axum = "0.6"
tower = { version = "0.4", features = ["full"] }

# https://tokio.rs/
tokio = { version = "1.32", features = ["full"] }

# https://diesel.rs/
diesel = { version = "2.1", features = ["postgres"] }
# Also: cargo install diesel_cli --no-default-features --features postgres

# https://diesel.rs/guides/getting-started/#migrations
diesel_migrations = "2.1"

# https://github.com/bikeshedder/deadpool
deadpool-diesel = { version = "0.4", features = ["postgres"] }

# https://serde.rs/
serde = "1.0"
serde_json = "1.0"

# https://github.com/allan2/dotenvy
dotenvy = "0.15"

# https://github.com/chronotope/chrono
chrono = "0.4"

[dev-dependencies]

# https://insta.rs/
insta = "1.31"
