[package]
name = "vrt-backend-rust-chatgpt"
description = "Visual Regression Tracker backend service"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/tokio-rs/axum
axum = { version = "0.6", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }

# https://tokio.rs/
tokio = { version = "1.33", features = ["full"] }

# https://diesel.rs/
diesel = { version = "2.1", features = ["postgres", "chrono"] }
# Also: cargo install diesel_cli --no-default-features --features postgres

# https://diesel.rs/guides/getting-started/#migrations
diesel_migrations = "2.1"

# https://github.com/bikeshedder/deadpool
deadpool-diesel = { version = "0.5", features = ["postgres"] }

# https://serde.rs/
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# https://github.com/allan2/dotenvy
dotenvy = "0.15"

# https://github.com/chronotope/chrono
chrono = { version = "0.4", features = ["serde"] }

# Tracer to get output only when needed
# https://crates.io/crates/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Wanna have random return results while developing
# https://crates.io/crates/rand
rand = "0.8"

# Easily hash and verify passwords using bcrypt
# https://crates.io/crates/bcrypt
bcrypt = "0.15"

[dev-dependencies]

# https://insta.rs/
insta = "1.33"

